# GameTaskWidget

./: .gitignore  update.md
GameTaskWidget/: IMPLEMENTATION_STATUS.md  README.md  SETUP.md  build.bat  index.html  package-lock.json  package.json  start-built.bat  start.bat  vite.config.ts
GameTaskWidget/public/ico/: README.txt  manifest.json
GameTaskWidget/scripts/: create-icon.js
GameTaskWidget/src/: App.svelte  app.css  debug.ts  global.d.ts  main.ts
GameTaskWidget/src-tauri/: Cargo.toml  tauri.conf.json
GameTaskWidget/src-tauri/capabilities/: default.json
GameTaskWidget/src-tauri/icons/: README.md
GameTaskWidget/src-tauri/src/: main.rs
GameTaskWidget/src/lib/: PomodoroTimer.svelte  SettingsModal.svelte  TaskInput.svelte  TaskItem.svelte  TaskList.svelte  TaskbarPanel.svelte  debug.ts  groupIcons.ts  pomodoroStore.ts  store.ts
