[package]
name = "game-task-widget"
version = "0.1.0"
description = "Game HUD Task Widget - Windows Desktop Widget"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
window-vibrancy = "0.7"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-window-state = "2.0"
tauri-plugin-dialog = "2.0"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs"] }
notify = "7"

[features]
default = []
